--- a/mocxpdf/package.json
+++ b/mocxpdf/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-to-pdf": "^1.0.1",
+    "react-to-print": "^2.14.15",
     "recharts": "^2.10.3",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
